--- a/EmployManagementSystemUsingJSF/src/main/webapp/Richfaces/rich-tree.xhtml
+++ b/EmployManagementSystemUsingJSF/src/main/webapp/Richfaces/rich-tree.xhtml
@@ -1,23 +1,24 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:sql_rt="http://java.sun.com/jstl/sql_rt"
-      xmlns:a4j="http://richfaces.org/a4j"  
-xmlns:rich="http://richfaces.org/rich"> 
-<f:view>  
-<h:head>  
-<title>Rich Tree </title>  
-</h:head>  
-<h:body>  
-<h:form>  
-<rich:tree value="#{tree.rootNodes}" var="tree">  
-<rich:treeNode>  
-<h:outputText value="#{tree.data}" />  
-</rich:treeNode>  
-</rich:tree>  
-</h:form>  
-</h:body>  
-</f:view>    
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:sql_rt="http://java.sun.com/jstl/sql_rt"
+	xmlns:a4j="http://richfaces.org/a4j"
+	xmlns:rich="http://richfaces.org/rich">
+<f:view>
+	<h:head>
+		<title>Rich Tree</title>
+	</h:head>
+	<h:body>
+		<h:form>
+		<h:outputText value="Hi "></h:outputText>
+			<rich:tree value="#{tree.rootNodes}" var="tree">
+				<rich:treeNode>
+					<h:outputText value="#{tree.data}" />
+				</rich:treeNode>
+			</rich:tree>
+		</h:form>
+	</h:body>
+</f:view>
 </html>
 
